# idbi-hack

./: .gitignore  README.md
client/: package.json  pnpm-lock.yaml
client/src/: middleware.ts
client/src/app/: globals.css  page.tsx
client/src/components/avatar/: AvatarPlayer.tsx
client/src/components/chat/: AdvisoryChat.tsx
client/src/hooks/: useWebSocket.ts
client/src/types/: jmuxer.d.ts
docs/superpowers/plans/: 2026-07-01-wealth-advisor.md
docs/superpowers/specs/: 2026-07-01-wealth-advisor-design.md
server/: .env.example  .gitignore  main.py  pyproject.toml
server/agent/: asr.py  brain.py
server/api/: websocket.py
server/db/: neon_client.py
server/rag/: qdrant_client.py
server/render/: musetalk.py  tts.py
server/scripts/: ingest.py
